@@ -1,3 +1,9 @@
+16xx.	[bug]		tmark
+	Corrected an issue in kea-dhcp6 where the server would fail
+	to extend the expiry of a existing dynamic lease assigned to
+	client with host reservation.
+	(Gitlab #754)
+
 1670.	[func]		fdupont
 	Added searches for host reservations by hostname and by hostname
 	and subnet.
